# shipwrecked-day-1-cpp

./: CMakeLists.txt
public/icons/: credit.txt
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  guthrie.h  guthrie.hpp  layouts.cpp  longterm.cpp  longterm.h  main.cpp  main.h  sdl_clay.c  sdl_clay.h
wasm/: index.html  umessage.data  umessage.js
